Добавлена возможность редактировать варианты от которых зависит цена страховки Добавлены соответствующие веб-формы Исправлены мелкие баги